# cppjinja

./: CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  config.hpp.in  shell.nix
.fossil-settings/: ignore-glob
absd/: CMakeLists.txt
absd/absd/: abstract_data.cpp  abstract_data.hpp  simple_data_holder.cpp  simple_data_holder.hpp
absd/src/: abstract_data.cpp  abstract_data.hpp  simple_data_holder.cpp  simple_data_holder.hpp
absd/tests/: absd_test.cpp  mocks.hpp  simple_data_holder_test.cpp  to_json_test.cpp
cmake/: config.cmake.in  configure_file.cmake  download_or_get.cmake  flags.cmake  target_sources_local.cmake  tests.inc.cmake
eval/: ast.cpp  ast.hpp  ast_cvt.cpp  ast_cvt.hpp  eval.hpp
evaluator/: ast.hpp  ast_cvt.cpp  ast_cvt.hpp  eval.cpp  eval.hpp  evaluate_tree.cpp  evaluate_tree.hpp
evaluator/tree/: block.cpp  block.hpp  tmpl.cpp  tmpl.hpp
evtree/: context.cpp  context.hpp  declarations.hpp  evtree.cpp  evtree.hpp  exenv.cpp  exenv.hpp  node.cpp  node.hpp  node_tree.cpp  node_tree.hpp  tmpl_compiler.cpp  tmpl_compiler.hpp
evtree/exenv/: callstack.cpp  callstack.hpp  callstack_impl.cpp  callstack_impl.hpp  context.cpp  context.hpp  context_impl.cpp  context_impl.hpp  context_object.hpp  ctx_object.cpp  ctx_object.hpp  expr_eval.cpp  expr_eval.hpp  expr_filter.cpp  expr_filter.hpp  expr_reduce.cpp  expr_reduce.hpp  expr_solver.cpp  expr_solver.hpp  impl.cpp  impl.hpp  obj_holder.cpp  obj_holder.hpp  raii.cpp  raii.hpp  result_formatter.cpp  result_formatter.hpp
evtree/exenv/context_objects/: builtins.cpp  builtins.hpp  callable_node.cpp  callable_node.hpp  callable_params.cpp  callable_params.hpp  delay_call.cpp  delay_call.hpp  inner_navigation.cpp  inner_navigation.hpp  queue.cpp  queue.hpp  tree.cpp  tree.hpp  user_data.cpp  user_data.hpp  value.cpp  value.hpp
evtree/exenv/context_objects/builtins/: function_adapter.cpp  function_adapter.hpp  lambda.cpp  lambda.hpp  tests.cpp  tests.hpp
evtree/exenv/expr/: cmp_check.cpp  cmp_check.hpp  eval.hpp  logic_check.cpp  logic_check.hpp  math.cpp  math.hpp  term.hpp
evtree/helpers/: binary_op.cpp  binary_op.hpp  loop_by_three.hpp
evtree/nodes/: block_call.cpp  block_call.hpp  block_else.cpp  block_else.hpp  block_filtered.cpp  block_filtered.hpp  block_for.cpp  block_for.hpp  block_if.cpp  block_if.hpp  block_macro.cpp  block_macro.hpp  block_named.cpp  block_named.hpp  block_set.cpp  block_set.hpp  block_with_name.cpp  block_with_name.hpp  callable.cpp  callable.hpp  content.cpp  content.hpp  content_block.cpp  content_block.hpp  op_out.cpp  op_out.hpp  op_set.cpp  op_set.hpp  tmpl.cpp  tmpl.hpp
loader/: parser.cpp  parser.hpp
parser/: ast.cpp  ast.hpp  common.cpp  common.hpp  config.hpp  debug_operators.cpp  debug_operators.hpp  grammar.cpp  grammar.hpp  grammar.inl  grammar.ipp  helpers.cpp  helpers.hpp  parse.hpp  traits.hpp
parser/ast/: blocks.hpp  common.hpp  expr.hpp  opterm.hpp  single.hpp  tmpls.hpp
parser/fusion/: blocks.hpp  common.hpp  expr.hpp  opterm.hpp  single.hpp  tmpls.hpp
parser/grammar/: blocks.hpp  common.hpp  expr.hpp  opterm.hpp  single.hpp  tmpls.hpp
parser/grammar_def/: blocks.cpp  blocks.hpp  common.cpp  common.hpp  expr.cpp  expr.hpp  opterm.cpp  opterm.hpp  single.cpp  single.hpp  tmpls.cpp  tmpls.hpp
parser/operators/: blocks.cpp  blocks.hpp  common.cpp  common.hpp  expr.cpp  expr.hpp  opterm.cpp  opterm.hpp  single.cpp  single.hpp
tests/: jparse.cpp  mocks.hpp
tests/eval/: eval_builtins_test.cpp  eval_common_test.cpp  eval_completeness_test.cpp  eval_exenv_test.cpp  eval_expr_test.cpp  eval_node_for_test.cpp  eval_nodes_test.cpp  eval_op_out_test.cpp  eval_tabs_test.cpp  eval_tmpl_compiler_test.cpp  eval_tree_test.cpp  mocks.hpp
tests/jparse/: json_prov.cpp  json_prov.hpp
tests/loader/: common_test.cpp  load_common_test.cpp
tests/parser/: basic_test.cpp  errors_test.cpp  parser_helpers_test.cpp  rules_blocks_test.cpp  rules_common_test.cpp  rules_expr_test.cpp  rules_opterm_test.cpp  rules_single_test.cpp  rules_test.cpp  rules_tmpls_test.cpp  templates_test.cpp
